@@ -1,3 +1,7 @@
+2008-03-10  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* Makefile.am: only set libtool versioning when building dynamic lib.
+
 ==================== 0.9.9 ====================
 
 2008-02-17  Jens Granseuer  <jensgr@gmx.net>
